crates/lang/tests/ui/contract/fail/message-input-pattern.rs
use ink_lang as ink;

#[ink::contract]
mod contract {
    #[ink(storage)]
    pub struct Contract {}

    impl Contract {
        #[ink(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }

        #[ink(message)]
        pub fn message(&self, (_a, _b): (i32, i32)) {}
    }
}

fn main() {}
